--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body class="container-fluid">
-   <h2 class="bi bi-person-fill bg-primary text-white p-2">My Portfolio</h2> 
+   <h2 class="bi bi-person-fill bg-primary text-white p-2 text-center">My Portfolio</h2> 
 </body>
 </html>
